--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,11 @@ body {
   background-color: black;
 }
 h1 {
-  color: white;
+  color: #7289DA;
 }
 h2 {
-  color: white;
+  color: #7289DA;
 }
 p {
-  color: white;
+  color: #7289DA;
 }
